bouncy ball prototype and fix footer spacing on index

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -67,5 +67,5 @@ img {
 	margin-top: 10%;
 	padding-left: 5%;
 	padding-right: 5%;
-	padding-bottom: 1%;
+	padding-bottom: 8%;
 }
